# finnabar

./: .gitignore  README.md  activate.sh  docker-compose.yml  env.sh  package.json  turbo.json
apps/ore/: Dockerfile  links.json  main.py  package.json  pyproject.toml  requirements.txt
apps/ore/downloader/: store.py
apps/ore/scraper/: ore_data.json  pdf_scraper.py  realtime.py  scraper.py
apps/web/: package.json
