[project]
name = "ore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
    "yfinance>=1.4.0",
]
